--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               },
             ],
             mainMenu: {
-              splashes: ["Darviglet!", "eaglerenophile!", "You Eagler!", "Yeeeeeee!", "yeee", "Echo on top!", "3kh0.github.io", "Echo is cool", "REEEEEEE", "EEEEEEEEE!", "You Darvig!", "You Vigg!", ":>", "|>", "You Yumpster!"],
+              splashes: ["Darviglet!", "AmethystRUFenophile!", "You AmethystRUF!", "Im in the trap butt booty naked!", "shh, now is not the time", "AmethystRUF on top!", "github.com/amethystRUF", "Now With More Protein!", "The next splash is a joke, please don't get mad...", "Jose should go kys!", "You!", "Listen To Destroy Lonely!", "Playboi Carti!", "Backspace", "Southpark Rule34!"],
               eaglerLogo: false,
             },
           };
