--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
               },
             ],
             mainMenu: {
-              splashes: ["Darviglet!", "AmethystRUFenophile!", "You AmethystRUF!", "Im in the trap butt booty naked!", "shh, now is not the time", "AmethystRUF on top!", "github.com/amethystRUF", "Now With More Protein!", "The next splash is a joke, please don't get mad...", "Jose should go kys!", "You!", "Listen To Destroy Lonely!", "Playboi Carti!", "Backspace", "Southpark Rule34!"],
-              eaglerLogo: false,
+              splashes: ["Tristan is cool!"],
+              eaglerLogo: true,
             },
           };
 
